--- a/10_Spring_With_Maven/pom.xml
+++ b/10_Spring_With_Maven/pom.xml
@@ -23,7 +23,6 @@
             <version>5.3.20</version>
         </dependency>
 
-
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -32,7 +31,12 @@
             <scope>provided</scope>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
 
     </dependencies>
 
